# Azure-Drill

./: .gitattributes  .gitignore
Azure Functions/: pyproject.toml
Azure Functions/SampleAzureFunction/: function_app.py  requirements.txt
OAuth/api/: README.md  pyproject.toml
OAuth/api/root/ai_query_engine/: cosmos_vcore_retriever.py
OAuth/api/root/ai_query_engine/agents/: base_agent.py  base_react_agent.py  base_text_to_sql_agent.py
OAuth/api/root/ai_query_engine/chains/: base_chain.py  base_chat_chain.py  base_message_chain.py  base_rag_chain.py
OAuth/api/root/ai_query_engine/configuration/: settings.py
OAuth/api/root/ai_query_engine/core/: base_chat_model_action.py
OAuth/api/root/ai_query_engine/graphs/: agent_node.py  base_graph_engine.py
OAuth/api/root/ai_query_engine/models/: azure_models.py  extensions.py  llm_factory.py  model_settings.py
OAuth/api/root/ai_query_engine/tools/: base_retrievers.py  base_tools.py
OAuth/api/root/ai_query_engine/util/: __init__.py  memory_cache.py
OAuth/api/root/auth/: .env.example  README.md  __init__.py  config.py  configs.py  constants.py  core.py  exceptions.py  main.py  oauth_utils.py  password_utils.py  rbac_utils.py  routes.py  session_utils.py  utils.py
OAuth/api/root/auth(legacy)/common/: config.py  exceptions.py  middleware.py  schemas.py
OAuth/api/root/auth(legacy)/core/: auth_manager.py  flows.py
OAuth/api/root/auth(legacy)/csrf/: __init__.py  csrf_manager.py
OAuth/api/root/auth(legacy)/email/: __init__.py  email_manager.py
OAuth/api/root/auth(legacy)/oauth/: __init__.py  azure_oauth_provider.py  google_oauth_provider.py  oauth_manager.py
OAuth/api/root/auth(legacy)/password/: __init__.py  password_manager.py
OAuth/api/root/auth(legacy)/rate_limiting/: __init__.py  rate_limiter.py
OAuth/api/root/auth(legacy)/rbac/: __init__.py  permission.py  rbac_manager.py  role.py
OAuth/api/root/auth(legacy)/security/: otp_utils.py  password_utils.py  secret_manager.py  security_utils.py  token_utils.py
OAuth/api/root/auth(legacy)/session_management/: cookie_manager.py  session_manager.py  token_cookie_manager.py
OAuth/api/root/auth(legacy)/validation/: __init__.py  input_validator.py
OAuth/api/root/auth/api/: __init__.py  dependencies.py  main.py
OAuth/api/root/auth/base/: __init__.py
OAuth/api/root/auth/common/: schemas.py
OAuth/api/root/auth/core/: auth_manager.py  flows.py
OAuth/api/root/auth/email/: __init__.py
OAuth/api/root/auth/exceptions/: __init__.py  auth_exceptions.py
OAuth/api/root/auth/managers/: __init__.py  otp_manager.py  token_manager.py  user_manager.py
OAuth/api/root/auth/models/: __init__.py  backup_code.py  otp_code.py  otp_session.py  recovery_code.py  token.py  user.py
OAuth/api/root/auth/oauth/: __init__.py
OAuth/api/root/auth/providers/: __init__.py  azure.py  base.py  google.py
OAuth/api/root/auth/rate_limiting/: rate_limiter.py
OAuth/api/root/auth/rbac/: permission.py
OAuth/api/root/auth/repositories/: __init__.py  otp_repository.py  token_repository.py  (+1 more)
OAuth/api/root/domain/: base_manager.py  base_mongo_manager.py  base_sql_manager.py
OAuth/api/src/api/: alembic.ini  main.py
(+150 files in other folders)
