[project]
name = "Azure-Functions"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sumsam Ali", email = "sumsamali.cs@gmail.com"},
]
dependencies = [
    "azure-functions==1.23.0",
    "markupsafe==3.0.2; python_version >= \"3.9\"",
    "werkzeug==3.1.3; python_version >= \"3.9\"",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
